# atlasdcat

./: .flake8  .gitignore  LICENSE  README.md  noxfile.py  pyproject.toml
docs/: atlasdcat.rst  conf.py  example.md  example.rst  index.rst  modules.rst  reference.rst  requirements.txt
example/: README.md  simple-server.py
example/atlas/: docker-compose.yml
example/atlas/model/: glossary.json
example/atlas/resources/: atlas-setup.sh
src/atlasdcat/: __init__.py  attribute.py  glossaryclient.py  mapper.py  termtype.py
tests/: __init__.py  test_atlas_client.py  test_mapper.py
tests/files/: catalog.ttl  catalog_approved.ttl  mock_atlas_glossary_term_dataset_response.json  mock_glossary_contact_details_missing.json  mock_glossary_contact_details_missing_response.json  mock_glossary_detailed.json  mock_glossary_detailed_empty_terms_response.json  mock_glossary_detailed_invalid_format.json  mock_glossary_detailed_invalid_format_response.json  mock_glossary_detailed_persisted_changed_response.json  mock_glossary_detailed_persisted_response.json  mock_glossary_detailed_response.json  mock_glossary_invalid_date.json  mock_glossary_invalid_date_response.json  mock_glossary_term_dataset1_changed_response.json  mock_glossary_term_dataset1_request.json  mock_glossary_term_dataset2_request.json  mock_glossary_term_dataset2_response.json  mock_glossary_term_distribution1_changed_response.json  mock_glossary_term_distribution1_request.json  mock_glossary_term_distribution2_request.json  mock_glossary_term_distribution2_response.json
