[tool.poetry]
authors = ["Jeff Reiffers <jeff@ouvir.no>", "Stig B. Dørmænen <stigbd@gmail.com>"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]
description = "A library for managing DCAT metadata using Apache Atlas"
documentation = "https://atlasdcat.readthedocs.io"
homepage = "https://github.com/Informasjonsforvaltning/atlasdcat"
license = "Apache-2.0"
name = "atlasdcat"
readme = "README.md"
repository = "https://github.com/Informasjonsforvaltning/atlasdcat"
version = "1.0.3"

[tool.poetry.dependencies]
datacatalogtordf = "^3.0.0"
pyapacheatlas = "^0.14.0"
python = ">=3.8,<3.11"
black = "^22.10.0"
coverage = "^6.5.0"

[tool.poetry.dev-dependencies]
Sphinx = "^5.0.1"
bandit = "^1.7.4"
black = "^22.1.0"
codecov = "^2.0.16"
coverage = "^6.3.2"
darglint = "^1.5.5"
flake8 = "5.0.4"
flake8-annotations = "^2.4.1"
flake8-bandit = "^4.1.1"
flake8-black = "^0.3.2"
flake8-bugbear = "^22.10.27"
flake8-docstrings = "^1.5.0"
flake8-import-order = "^0.18.1"
mypy = "0.991"
myst-parser = "^0.18.1"
nox = "^2022.1.7"
nox-poetry = "^1.0.2"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
pytest-responses = "^0.5.1"
python-dotenv = "^0.21.0"
pytype = "^2022.11.10"
requests = "^2.27.1"
responses = "^0.22.0"
safety = "2.3.1"
sphinx-autodoc-typehints = "^1.19.5"
xdoctest = "1.1.0"
simplejson = "^3.18"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = false
source = ["atlasdcat"]

[tool.coverage.report]
fail_under = 100
show_missing = true

[tool.mypy]
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict = false
warn_unreachable = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  "pytest_mock.*",
  "pyapacheatlas.*",
  "concepttordf.*",
  "datacatalogtordf.*",
]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
